tests/e2e/macros/procedural/custom/snapshots/e2e__macros__procedural__custom__attribute_complex.snap
---
source: tests/e2e/macros/procedural/custom/mod.rs
expression: report
---
[[expansions]]
analyzed_lines = """
#[complex_attribute_macro]<caret>
fn <caret>foo() {}
fn foo() {<caret>}
"""
generated_code = """
fn generated_function() {}
"""
