tests/e2e/macros/procedural/custom/snapshots/e2e__macros__procedural__custom__attribute_improper.snap
---
source: tests/e2e/macros/procedural/custom/mod.rs
expression: report
---
[[expansions]]
analyzed_lines = """
#[improper_attribute_macro]<caret>
fn f<caret>oo() {}
fn foo() {<caret>}
"""
generated_code = """
// lib.cairo
// ---------

#[improper_attribute_macro]
fn foo() {}

// proc_macro_improper_attribute_macro
// -----------------------------------

fn foo() {}
fn added_fun() {
    a = b;
}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: |-
      #[improper_attribute_macro]
      fn foo() {}
    diagnostic:
      range:
        start:
          line: 0
          character: 0
        end:
          line: 1
          character: 11
      severity: 1
      code: E0006
      message: Identifier not found.
      relatedInformation:
      - location:
          uri: vfs://proc_macro_improper_attribute_macro.cairo
          range:
            start:
              line: 0
              character: 29
            end:
              line: 0
              character: 30
        message: Diagnostic mapped from here.
  - related_code: |-
      #[improper_attribute_macro]
      fn foo() {}
    diagnostic:
      range:
        start:
          line: 0
          character: 0
        end:
          line: 1
          character: 11
      severity: 1
      code: E0006
      message: Identifier not found.
      relatedInformation:
      - location:
          uri: vfs://proc_macro_improper_attribute_macro.cairo
          range:
            start:
              line: 0
              character: 33
            end:
              line: 0
              character: 34
        message: Diagnostic mapped from here.
  - related_code: |-
      #[improper_attribute_macro]
      fn foo() {}
    diagnostic:
      range:
        start:
          line: 0
          character: 0
        end:
          line: 1
          character: 11
      severity: 1
      message: Invalid left-hand side of assignment.
      relatedInformation:
      - location:
          uri: vfs://proc_macro_improper_attribute_macro.cairo
          range:
            start:
              line: 0
              character: 29
            end:
              line: 0
              character: 30
        message: Diagnostic mapped from here.
