tests/e2e/macros/procedural/custom/snapshots/e2e__macros__procedural__custom__attribute_with_error.snap
---
source: tests/e2e/macros/procedural/custom/mod.rs
expression: report
---
[[expansions]]
analyzed_lines = """
#[error_attribute_macro]<caret>
fn f<caret>oo() {}
fn foo() {<caret>}
"""
generated_code = """
#[error_attribute_macro]
fn foo() {}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: '#[error_attribute_macro]'
    diagnostic:
      range:
        start:
          line: 0
          character: 0
        end:
          line: 0
          character: 24
      severity: 1
      message: 'Plugin diagnostic: Error from procedural macro'
