tests/e2e/macros/procedural/custom/snapshots/e2e__macros__procedural__custom__derive_complex.snap
---
source: tests/e2e/macros/procedural/custom/mod.rs
expression: report
---
[[expansions]]
analyzed_lines = """
#[derive<caret>(ComplexDeriveMacro)]
#[derive(Complex<caret>DeriveMacro)]
struct Empty<caret>Struct {}
struct EmptyStruct {<caret>}
"""
generated_code = """
#[derive(ComplexDeriveMacro)]
struct EmptyStruct {}
//-----
fn generated_function() {}

trait MyTrait<T> {
    fn foo(t: T);
}

impl MyTraitImpl of MyTrait<felt252> {
    fn foo(t: felt252) {}
}
"""
